greeter/manifests/httproute.yaml
# Ambient waypoint L7 traffic split: 75% v1 / 25% v2
# https://istio.io/latest/docs/ambient/getting-started/manage-traffic/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter
  namespace: exercises
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: greeter-svc
      port: 3000
  rules:
    - backendRefs:
        - name: greeter-svc-1
          port: 3000
          weight: 75
        - name: greeter-svc-2
          port: 3000
          weight: 25
